# se-metrics-platform

./: .gitignore  README.md
backend/: .gitignore  CMakeLists.txt  rebuild_vs.cmd
backend/config/: config.env.example
backend/docs/: 2026-4-22_update.md  2026-4-25_update.md  2026-4-27_update_vector_search.md  2026-4-28_update_expert_report.md  CHANGELOG_2_4.md  api_get.md  api_post.md  update_2_1_1.md  update_2_4.md  update_frontend_1.md
backend/src/: main.cpp  routes.cpp  routes.h
backend/src/ai/: ai_assistant.cpp  ai_assistant.h  knowledge_base.cpp  knowledge_base.h
backend/src/api/: routes.cpp  routes.h  routes_ai.cpp  routes_delete.cpp  routes_expert.cpp  routes_get.cpp  routes_post.cpp  routes_put.cpp  routes_report.cpp  routes_risk.cpp  routes_tasks.cpp
backend/src/app/: main.cpp
backend/src/common/: util.cpp  util.h
backend/src/db/: db.cpp  db.h
backend/src/expert/: pagerank.cpp  pagerank.h
backend/src/repo_metrics/: github_client.cpp  github_client.h  health.cpp  health.h  hotspots.cpp  hotspots.h  metrics.cpp  metrics.h
backend/src/report/: weekly_report.cpp  weekly_report.h
backend/src/risk/: detector.cpp  detector.h
backend/test/: routes_test.txt
frontend/: .gitignore  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/views/: AiConversationDetailView.vue  AiView.vue  ExpertsView.vue  RepoDetailView.vue  ReposView.vue  TasksView.vue  WeeklyReportsView.vue
scripts/: init_db.sql
